--- a/event_manager/src/widgets/testEventPage.html
+++ b/event_manager/src/widgets/testEventPage.html
@@ -3,18 +3,29 @@
 
 <body>
 <script>
+    var outputElementId = "eventList"; 
     var xhttp = new XMLHttpRequest();
     xhttp.onreadystatechange = function() {
    
         if (this.readyState == 4 && this.status == 200) {
-            document.getElementById("eventList").innerHTML = this.responseText;
+            let eventObjects = JSON.parse(this.responseText);
+            let list = '<ul>';
+            for (var i = 0; i < eventObjects.length; i++) {
+                for (var property in eventObjects[i]) {
+                    list+= '<li>' + eventObjects[i][property] + '</li>';
+                }
+            }
+            list += '</ul>';
+            document.getElementById(outputElementId).innerHTML = list;
         }
     };
   xhttp.open("GET", "https://us-central1-event-manager-8e18d.cloudfunctions.net/api", true);
   xhttp.send();
 
 </script>
-<div id="eventList"></div>
+<div id="eventsDiv">
+    <ul id="eventList"></ul>
+</div>
 </body>
 
 </html>
